[workspace]
members = ["rcss", "rcss_core", "build_rs_test", "rcss_macro", "macro_visit"]
exclude = ["build_rs_test/tested_project"]
resolver = "2"

[workspace.dependencies]
syn = { version = "2.0.15", features = [
    "full",
    "visit",
    "parsing",
    "extra-traits",
] }
quote = "1.0.9"
proc-macro2 = { version = "1.0.69", features = ["span-locations"] }
glob = { version = "0.3.0" }

Inflector = { version = "0.11.4" }
pretty_assertions = "1.4"

rand = "0.8.4"
rand_chacha = "0.3.1"


rcss_core = { version = "0.1.0", path = "rcss_core" }
rcss_macro = { version = "0.1.0", path = "rcss_macro" }
rcss = { version = "0.1.0", path = "rcss" }
macro_visit = { version = "0.1.0", path = "macro_visit" }

criterion = "0.5"
