[workspace]
members = [
    "rcss",
    "rcss-core",
    "build_rs_test",
    "rcss-macro",
    "macro-visit",
    "test-usage",
    "rcss-leptos",
    "rcss-bundler",
    "rcss-layers",
]
exclude = ["build_rs_test/tested_project"]
resolver = "2"

[workspace.dependencies]
syn = { version = "2.0.15", features = [
    "full",
    "visit",
    "parsing",
    "extra-traits",
] }
quote = "1.0.9"
thiserror = "1.0"
proc-macro2 = { version = "1.0.69", features = ["span-locations"] }
glob = { version = "0.3.0" }

Inflector = { version = "0.11.4" }
pretty_assertions = "1.4"

rand = "0.8.4"
rand_chacha = "0.3.1"

const_format = "0.2.32"


rcss-core = { version = "0.2.0", path = "rcss-core" }
rcss-macro = { version = "0.2.0", path = "rcss-macro" }
rcss-layers = { version = "0.2.0", path = "rcss-layers" }
rcss = { version = "0.2.0", path = "rcss" }
macro-visit = { version = "0.2.0", path = "macro-visit" }
rcss-bundler = { version = "0.2.0", path = "rcss-bundler", default-features = false }

criterion = "0.5"
