[package]
name = "rcss-bundle"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = { version = "0.18", optional = true }
camino = { version = "1.1.6", optional = true }
toml = { version = "0.8.9", optional = true }

syn = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
macro-visit = { workspace = true, optional = true }
rcss-core = { workspace = true, optional = true }

serde_json = "1.0"

[features]
default = ["full"]
full = [
    "dep:cargo_metadata",
    "dep:camino",
    "dep:toml",
    "dep:syn",
    "dep:proc-macro2",
    "dep:macro-visit",
    "dep:rcss-core",
]
