[package]
name = "rcss-bundler"
version = "0.2.0"
edition = "2021"
description = "Part of Rust CSS embedding library that allows using collect and save all styles in a file."
authors = ["vldm <me@vldm.cc>"]
keywords = ["css", "html", "rsx", "macro", "parse"]
repository = "https://github.com/rs-tml/rcss"
readme = "../README.md"
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE"]

[dependencies]
cargo_metadata = { version = "0.18", optional = true }
camino = { version = "1.1.6", optional = true }
toml = { version = "0.8.9", optional = true }

syn = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
macro-visit = { workspace = true, optional = true }
rcss-core = { workspace = true, optional = true }

serde_json = "1.0"

[features]
default = ["full"]
full = [
    "dep:cargo_metadata",
    "dep:camino",
    "dep:toml",
    "dep:syn",
    "dep:proc-macro2",
    "dep:macro-visit",
    "dep:rcss-core",
]
