[package]
name = "rcss-core"
version = "0.1.1"
edition = "2021"
description = "RCSS - (core) contain parser functionality."
authors = ["vldm <me@vldm.cc>"]
keywords = ["css", "html", "rsx", "macro", "parse"]
repository = "https://github.com/rs-tml/rcss"
license = "MIT"
include = ["/src", "../LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.52", features = [
    "visitor",
    "into_owned",
] }
parcel_selectors = { version = "0.26.4" }
cssparser = { version = "0.33.0" }

rand = { workspace = true }
rand_chacha = { workspace = true }

Inflector = { workspace = true, optional = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }
thiserror = "1.0"

[features]
default = ["auto-snake-case", "indexed-classes"]

# Note: in rcss-core, all backends can be enabled at once.
# But in rcss-macro/rcss only one backend can be enabled at once.

auto-snake-case = ["dep:Inflector"]
indexed-classes = []
macro-helper = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "backend-scoped"
harness = false
path = "benches/backend-scoped.rs"


[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
