[package]
name = "rcss-core"
version = "0.2.0"
edition = "2021"
description = "RCSS - (core) contain parser functionality."
authors = ["vldm <me@vldm.cc>"]
keywords = ["css", "html", "rsx", "macro", "parse"]
repository = "https://github.com/rs-tml/rcss"
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.52", features = [
    "visitor",
    "into_owned",
] }
parcel_selectors = { version = "0.26.4" }
cssparser = { version = "0.33.0" }

rand = { workspace = true }
rand_chacha = { workspace = true }


proc-macro2 = { workspace = true }
quote = { workspace = true }
thiserror = { workspace = true }
syn = { workspace = true }

[features]
default = []


[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "backend-scoped"
harness = false
path = "benches/backend-scoped.rs"


[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
