[package]
name = "rcss-leptos"
version = "0.2.0"
edition = "2021"
description = "Rust CSS embedding library integration with leptos framework."
authors = ["vldm <me@vldm.cc>"]
keywords = ["css", "html", "rsx", "macro", "parse"]
repository = "https://github.com/rs-tml/rcss"
readme = "../README.md"
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE"]
[dependencies]
rcss = { workspace = true }
rcss-layers = { workspace = true }

leptos = "0.6.0"
leptos_meta = "0.6.0"
