[package]
name = "rcss-macro"
version = "0.2.0"
edition = "2021"
description = "RCSS - (macro) implementation of proc macros."
authors = ["vldm <me@vldm.cc>"]
keywords = ["css", "html", "rsx", "macro", "parse"]
repository = "https://github.com/rs-tml/rcss"
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
rcss-core = { workspace = true }

Inflector = { workspace = true, optional = true }

[build-dependencies]
rcss-bundler = { workspace = true, default-features = false }
toml = "0.8"

[features]
# Note: in rcss-core, all backends can be enabled at once.
# But in rcss-macro/rcss only one backend can be enabled at once.
default = ["auto-snake-case", "indexed-classes"]
auto-snake-case = ["dep:Inflector"]
indexed-classes = []
