
[package]
name = "rcss"
version = "0.1.1"
edition = "2021"
description = "Rust CSS embedding library"
authors = ["vldm <me@vldm.cc>"]
keywords = ["css", "html", "rsx", "macro", "parse"]
repository = "https://github.com/rs-tml/rcss"
readme = "../README.md"
license = "MIT"
include = ["/src", "../LICENSE"]

[dependencies]
syn = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
rcss-core = { workspace = true, optional = true }
rcss-macro = { workspace = true }
macro-visit = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4"


[features]
default = ["build-helper"]
build-helper = [
    "dep:macro-visit",
    "dep:proc-macro2",
    "dep:syn",
    "dep:rcss-core",
]
