
[package]
name = "rcss"
version = "0.1.1"
edition = "2021"
description = "Rust CSS embedding library"
authors = ["vldm <me@vldm.cc>"]
keywords = ["css", "html", "rsx", "macro", "parse"]
repository = "https://github.com/rs-tml/rcss"
readme = "../README.md"
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE"]

[dependencies]
rcss-macro = { workspace = true }
syn = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
rcss-core = { workspace = true, optional = true }
macro-visit = { workspace = true, optional = true }
const_format = "0.2.32"

[dev-dependencies]
pretty_assertions = "1.4"


[features]
default = ["build-helper"]
build-helper = [
    "dep:macro-visit",
    "dep:proc-macro2",
    "dep:syn",
    "dep:rcss-core",
]
