[package]
name = "rcss_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.51", features = [
    "visitor",
], optional = true }
parcel_selectors = { version = "0.26.4", optional = true }
cssparser = { version = "0.33.0", optional = true }
stylers_core = { version = "1.0.2", optional = true }

rand = { workspace = true }
rand_chacha = { workspace = true }

Inflector = { workspace = true, optional = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }

[features]
default = ["auto-snake-case", "indexed-classes"]

lightningcss = ["dep:lightningcss", "dep:parcel_selectors", "dep:cssparser"]
procss = []
stylers = ["dep:stylers_core"]

auto-snake-case = ["dep:Inflector"]
indexed-classes = []
macro-helper = []
