[package]
name = "rcss_macro"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
rcss_core = { workspace = true, features = ["macro-helper"] }

[features]
default = []

# Note: in rcss_core, all backends can be enabled at once.
# But in rcss_macro/rcss only one backend can be enabled at once.
lightningcss = ["rcss_core/lightningcss"]
procss = ["rcss_core/procss"]
stylers = ["rcss_core/stylers"]


[package.metadata.cargo-all-features]
skip_feature_sets = [
    [
        "procss",
        "lightningcss",
    ],
    [
        "stylers",
        "lightningcss",
    ],
    [
        "procss",
        "stylers",
    ],
    [
    ],
]
