[package]
name = "tested-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.21"
syn = "2.0.15"
syn_derive="0.1"
rcss = { version = "0.0.0", path = "../../" }
proc-macro2-diagnostics = "0.10"
shared_lib = { version="0.1.0", path="../shared_lib" }